:bug: Fix splash image introducing horizontal scrollbar

--- a/src/assets/components/splash.scss
+++ b/src/assets/components/splash.scss
@@ -53,7 +53,7 @@
     max-block-size: calc(100% + var(--offset) * 2);
     margin-block-start: 0;
     position: absolute;
-    inset-inline-end: calc(0px - var(--space-1));
+    inset-inline-end: calc(0px + var(--space-1));
     inset-block: calc(0px - var(--offset));
     object-fit: contain;
     object-position: center right;
